# babel-explorer

./: .gitignore  README.md  main.py  pyproject.toml
src/babel_xrefs/: babel_xrefs.py  cli.py
src/babel_xrefs/core/: downloader.py  nodenorm.py
src/babel_xrefs/trackers/: github_issues.py
