[project]
name = "babel-xrefs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "duckdb>=1.4.2",
    "pygithub>=2.8.1",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[project.scripts]
babel-xrefs = "babel_xrefs.cli:cli"
